--- a/index.html
+++ b/index.html
@@ -2,157 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Cyber Bot Game</title>
-  <style>
-    body {
-      margin: 0;
-      background: #0a0a0a;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      font-family: monospace;
-    }
-
-    #game {
-      position: relative;
-      width: 500px;
-      height: 500px;
-      background: #1a1a1a;
-      border: 4px solid #00ffcc;
-      box-shadow: 0 0 20px #00ffcc;
-    }
-
-    .entity {
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      box-shadow: 0 0 10px #00ffcc;
-    }
-
-    #player {
-      background: #00ffcc;
-    }
-
-    #goal {
-      background: #ffcc00;
-      border: 2px dashed #fff;
-    }
-
-    .obstacle {
-      background: #ff0044;
-      border-radius: 5px;
-    }
-
-    #score {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      color: #00ffcc;
-      font-size: 18px;
-    }
-
-    #message {
-      position: absolute;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      color: #ffcc00;
-      font-size: 16px;
-    }
-  </style>
+  <title>Moving Bot Game</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="game">
-    <div id="score">Score: 0</div>
-    <div id="message"></div>
-    <div id="player" class="entity"></div>
-    <div id="goal" class="entity"></div>
-    <div class="obstacle entity" style="top:100px;left:100px;"></div>
-    <div class="obstacle entity" style="top:300px;left:200px;"></div>
-    <div class="obstacle entity" style="top:150px;left:350px;"></div>
+    <h1>💻 Fran's Mini Game</h1>
+    <div id="player"></div>
   </div>
 
-  <script>
-    const game = document.getElementById('game');
-    const player = document.getElementById('player');
-    const goal = document.getElementById('goal');
-    const obstacles = document.querySelectorAll('.obstacle');
-    const scoreEl = document.getElementById('score');
-    const message = document.getElementById('message');
-
-    let posX = 230, posY = 230;
-    let score = 0;
-    const speed = 10;
-    const size = 40;
-    const limit = 500;
-
-    function updatePosition() {
-      player.style.left = posX + 'px';
-      player.style.top = posY + 'px';
-      checkCollision();
-    }
-
-    function movePlayer(e) {
-      switch (e.key) {
-        case 'ArrowUp':    if (posY - speed >= 0) posY -= speed; break;
-        case 'ArrowDown':  if (posY + speed + size <= limit) posY += speed; break;
-        case 'ArrowLeft':  if (posX - speed >= 0) posX -= speed; break;
-        case 'ArrowRight': if (posX + speed + size <= limit) posX += speed; break;
-      }
-      updatePosition();
-    }
-
-    function placeGoal() {
-      const randX = Math.floor(Math.random() * (limit - size));
-      const randY = Math.floor(Math.random() * (limit - size));
-      goal.style.left = randX + 'px';
-      goal.style.top = randY + 'px';
-    }
-
-    function checkCollision() {
-      const pRect = player.getBoundingClientRect();
-      const gRect = goal.getBoundingClientRect();
-
-      if (isOverlapping(pRect, gRect)) {
-        score++;
-        scoreEl.textContent = 'Score: ' + score;
-        message.textContent = '🎯 You scored!';
-        placeGoal();
-        setTimeout(() => message.textContent = '', 1000);
-      }
-
-      obstacles.forEach(ob => {
-        const oRect = ob.getBoundingClientRect();
-        if (isOverlapping(pRect, oRect)) {
-          message.textContent = '💥 You hit an obstacle!';
-          resetGame();
-        }
-      });
-    }
-
-    function isOverlapping(r1, r2) {
-      return !(r2.left > r1.right || 
-               r2.right < r1.left || 
-               r2.top > r1.bottom ||
-               r2.bottom < r1.top);
-    }
-
-    function resetGame() {
-      score = 0;
-      scoreEl.textContent = 'Score: 0';
-      posX = 230;
-      posY = 230;
-      updatePosition();
-      placeGoal();
-      setTimeout(() => message.textContent = '', 1500);
-    }
-
-    document.addEventListener('keydown', movePlayer);
-
-    // Inicializar
-    updatePosition();
-    placeGoal();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
