--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Moving Bot Game</title>
+  <title>Snake Game by Fran</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="game">
-    <h1>💻 Fran's Mini Game</h1>
-    <div id="player"></div>
+    <h1>🐍 Fran Snake</h1>
+    <canvas id="snake" width="400" height="400"></canvas>
+    <p id="score">Score: 0</p>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
