--- a/index.html
+++ b/index.html
@@ -1,85 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <title>Fran V Snake Game</title>
-  <style>
-    html, body { height:100%; margin:0; display:flex; align-items:center; justify-content:center; background:#000;}
-    canvas { border:1px solid #0f0; background:#111; }
-    #score { color:#0f0; font:20px monospace; position:absolute; top:10px; left:10px; }
-  </style>
+  <meta charset="UTF-8" />
+  <title>Snake Game</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <canvas width="400" height="400" id="game"></canvas>
   <div id="score">Score: 0</div>
-  <script>
-    const canvas = document.getElementById('game');
-    const ctx = canvas.getContext('2d');
-    const grid = 20, size = 20;
-    let count = 0, score = 0;
 
-    let snake = { x: 200, y: 200, dx: grid, dy: 0, cells: [], maxCells: 4 };
-    let food = { x: grid * 5, y: grid * 5 };
+  <div id="modal" class="hidden">
+    <div id="modal-content">
+      <h2>Game Over!</h2>
+      <p>Your score: <span id="final-score"></span></p>
+      <label for="player-name">Enter your name:</label>
+      <input id="player-name" type="text" maxlength="15" placeholder="Your name" />
+      <button id="save-score">Save Score</button>
+      <button id="send-email">Send Score by Email</button>
+      <button id="close-modal">Close</button>
+    </div>
+  </div>
 
-    function getRandomInt(min, max) {
-      return Math.floor(Math.random() * (max - min)) + min;
-    }
+  <h3>High Scores</h3>
+  <table id="highscores">
+    <thead><tr><th>Name</th><th>Score</th></tr></thead>
+    <tbody></tbody>
+  </table>
 
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'ArrowLeft' && snake.dx === 0)   { snake.dx = -grid; snake.dy = 0; }
-      if (e.key === 'ArrowUp' && snake.dy === 0)     { snake.dx = 0; snake.dy = -grid; }
-      if (e.key === 'ArrowRight' && snake.dx === 0) { snake.dx = grid; snake.dy = 0; }
-      if (e.key === 'ArrowDown' && snake.dy === 0)  { snake.dx = 0; snake.dy = grid; }
-    });
-
-    function loop() {
-      requestAnimationFrame(loop);
-      if (++count < 10) return;
-      count = 0;
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      snake.x += snake.dx;
-      snake.y += snake.dy;
-
-      if (snake.x < 0 || snake.x >= canvas.width || snake.y < 0 || snake.y >= canvas.height) {
-        return reset();
-      }
-
-      snake.cells.unshift({x: snake.x, y: snake.y});
-      if (snake.cells.length > snake.maxCells) snake.cells.pop();
-
-      ctx.fillStyle = '#f00';
-      ctx.fillRect(food.x, food.y, grid - 1, grid - 1);
-
-      ctx.fillStyle = '#0f0';
-      snake.cells.forEach((cell, idx) => {
-        ctx.fillRect(cell.x, cell.y, grid - 1, grid - 1);
-        if (cell.x === food.x && cell.y === food.y) {
-          snake.maxCells++;
-          score++;
-          document.getElementById('score').innerText = 'Score: ' + score;
-          food.x = getRandomInt(0, grid) * grid;
-          food.y = getRandomInt(0, grid) * grid;
-        }
-        for (let j = idx + 1; j < snake.cells.length; j++) {
-          if (cell.x === snake.cells[j].x && cell.y === snake.cells[j].y) {
-            return reset();
-          }
-        }
-      });
-    }
-
-    function reset() {
-      snake.x = snake.y = 200;
-      snake.cells = [];
-      snake.maxCells = 4;
-      snake.dx = grid; snake.dy = 0;
-      score = 0;
-      document.getElementById('score').innerText = 'Score: 0';
-      food.x = getRandomInt(0, grid) * grid;
-      food.y = getRandomInt(0, grid) * grid;
-    }
-
-    requestAnimationFrame(loop);
-  </script>
+  <script src="game.js"></script>
 </body>
 </html>
