--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <button id="startBtn">Start Game</button>
     <div id="scoreDisplay">Score: 0</div>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
+
+    <div id="leaderboard">
+      <h2>🏆 Leaderboard</h2>
+      <ol id="leaderboardList"></ol>
+      <button id="clearLeaderboardBtn">Clear Leaderboard</button>
+    </div>
   </div>
 
   <!-- EmailJS -->
