--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🐍 Profile MiniGame</h1>
+    <h1>🐍 Dev MiniGame</h1>
     <label for="playerName">Enter your name:</label>
     <input type="text" id="playerName" placeholder="Anonymous" />
     <button id="startBtn">Start Game</button>
