--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Profile MiniGame</title>
+  <h1>GAME_TITLE_PLACEHOLDER</h1>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
