--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <h1>GAME_TITLE_PLACEHOLDER</h1>
+  <title>Profile MiniGame</title> <!-- El título de la pestaña del navegador -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🐍 Profile MiniGame</h1>
+    <!-- El placeholder ahora está en el lugar correcto -->
+    <h1>GAME_TITLE_PLACEHOLDER</h1> 
+    
     <label for="playerName">Enter your name:</label>
     <input type="text" id="playerName" placeholder="Anonymous" />
     <button id="startBtn">Start Game</button>
@@ -25,7 +27,7 @@
     <div id="leaderboard">
       <h2>🏆 Leaderboard</h2>
       <ol id="leaderboardList"></ol>
-      </div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
