--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Profile MiniGame</title> <!-- El título de la pestaña del navegador -->
+  <title>Dev MiniGame</title> <!-- El título de la pestaña del navegador -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <!-- El placeholder ahora está en el lugar correcto -->
-    <h1>GAME_TITLE_PLACEHOLDER</h1> 
+    <h1>Snake Cahllenge</h1> 
     
     <label for="playerName">Enter your name:</label>
     <input type="text" id="playerName" placeholder="Anonymous" />
