--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> <title>Profile MiniGame</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <title>Profile MiniGame</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,16 +16,23 @@
       <button id="startBtn">Continue</button>
     </div>
 
-    <div id="gameScreen" style="display: none;">
-      <div id="scoreDisplay">Score: 0</div>
-      <canvas id="gameCanvas" width="400" height="400"></canvas>
-      <div id="mobileControls" class="mobile-controls-container">
-          <button id="upBtn">▲</button>
-          <div class="middle-row">
-              <button id="leftBtn">◄</button>
-              <button id="rightBtn">►</button>
-          </div>
-          <button id="downBtn">▼</button>
+    <div class="main-content">
+      <div id="gameScreen" style="display: none;">
+        <div id="scoreDisplay">Score: 0</div>
+        <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <div id="mobileControls" class="mobile-controls-container">
+            <button id="upBtn">▲</button>
+            <div class="middle-row">
+                <button id="leftBtn">◄</button>
+                <button id="rightBtn">►</button>
+            </div>
+            <button id="downBtn">▼</button>
+        </div>
+      </div>
+
+      <div id="leaderboard">
+        <h2>🏆 Leaderboard</h2>
+        <ol id="leaderboardList"></ol>
       </div>
     </div>
 
@@ -34,11 +42,6 @@
         <p>Your Final Score: <span id="finalScore">0</span></p>
         <button id="playAgainBtn">Play Again</button>
       </div>
-    </div>
-
-    <div id="leaderboard">
-      <h2>🏆 Leaderboard</h2>
-      <ol id="leaderboardList"></ol>
     </div>
   </div>
 
