--- a/index.html
+++ b/index.html
@@ -21,19 +21,24 @@
       <button id="startBtn">Continue</button>
     </div>
 
-    <div id="gameScreen" style="display: none;">
-      <div class="game-info">
-        <div id="scoreDisplay">Score: 0</div>
-        <div id="playCounterDisplay">Plays: ...</div>
+    <div class="main-content">
+      <div id="gameScreen" style="display: none;">
+        <div class="game-info">
+          <div id="scoreDisplay">Score: 0</div>
+          <div id="playCounterDisplay">Plays: ...</div>
+        </div>
+        <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <div id="mobileControls" class="mobile-controls-container">
+            <button id="upBtn">▲</button>
+            <button id="leftBtn">◄</button>
+            <button id="rightBtn">►</button>
+            <button id="downBtn">▼</button>
+        </div>
       </div>
-      <canvas id="gameCanvas" width="400" height="400"></canvas>
-      <div id="mobileControls" class="mobile-controls-container">
-          <button id="upBtn">▲</button>
-          <div class="middle-row">
-              <button id="leftBtn">◄</button>
-              <button id="rightBtn">►</button>
-          </div>
-          <button id="downBtn">▼</button>
+
+      <div id="leaderboard">
+        <h2>🏆 Global Leaderboard</h2>
+        <ol id="leaderboardList"><li>Loading...</li></ol>
       </div>
     </div>
 
@@ -43,11 +48,6 @@
         <p>Your Final Score: <span id="finalScore">0</span></p>
         <button id="playAgainBtn">Play Again</button>
       </div>
-    </div>
-
-    <div id="leaderboard">
-      <h2>🏆 Global Leaderboard</h2>
-      <ol id="leaderboardList"><li>Loading...</li></ol>
     </div>
   </div>
 
