--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     
     <div id="setupScreen">
-      <h1>Profile MiniGame</h1> 
+      <h1>🐍 Profile MiniGame</h1> 
       <label for="playerName">Enter your name:</label>
       <input type="text" id="playerName" placeholder="Player" maxlength="15" />
       <button id="startBtn">Continue</button>
@@ -23,10 +23,6 @@
 
     <div class="main-content">
       <div id="gameScreen" style="display: none;">
-        <div class="game-info">
-          <div id="scoreDisplay">Score: 0</div>
-          <div id="playCounterDisplay">Plays: ...</div>
-        </div>
         <canvas id="gameCanvas" width="400" height="400"></canvas>
         <div id="mobileControls" class="mobile-controls-container">
             <button id="upBtn">▲</button>
@@ -40,6 +36,11 @@
         <h2>🏆 Global Leaderboard</h2>
         <ol id="leaderboardList"><li>Loading...</li></ol>
       </div>
+    </div>
+    
+    <div class="game-info">
+        <div id="scoreDisplay">Score: 0</div>
+        <div id="playCounterDisplay">Plays: ...</div>
     </div>
 
     <div id="gameOverScreen" class="overlay-container">
