--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <div id="auth-container">
         <div id="loginScreen">
-            <p>Sign in to play and save your score!</p>
+            <p>Sign in to play and compete!</p>
             <button id="loginBtn" class="google-btn">
                 <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo">
                 Sign in with Google
@@ -32,29 +32,32 @@
                 <img id="userAvatar" src="" alt="User Avatar">
                 <span id="userName"></span>
             </div>
-            <button id="startBtn">Start Game</button>
-            <button id="logoutBtn">Sign Out</button>
-        </div>
-    </div>
-
-    <div id="gameScreen" style="display: none;">
-        <div class="game-info">
-          <div id="scoreDisplay">Score: 0</div>
-          <div id="playCounterDisplay">Plays: ...</div>
-        </div>
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
-        <div id="mobileControls" class="mobile-controls-container">
-            <button id="upBtn" class="d-pad">▲</button>
-            <button id="leftBtn" class="d-pad">◄</button>
-            <button id="rightBtn" class="d-pad">►</button>
-            <button id="downBtn" class="d-pad">▼</button>
-            <button id="boostBtn">BOOST</button>
+            <div class="profile-buttons">
+                <button id="startBtn">Start Game</button>
+                <button id="logoutBtn">Sign Out</button>
+            </div>
         </div>
     </div>
     
-    <div id="leaderboard">
-      <h2>🏆 Global Top 100</h2>
-      <ol id="leaderboardList"><li>Loading...</li></ol>
+    <div class="main-content">
+        <div class="game-column">
+            <div class="game-info">
+              <div id="scoreDisplay">Score: 0</div>
+              <div id="playCounterDisplay">Plays: ...</div>
+            </div>
+            <canvas id="gameCanvas" width="400" height="400"></canvas>
+            <div id="mobileControls" class="mobile-controls-container">
+                <button id="upBtn" class="d-pad">▲</button>
+                <button id="leftBtn" class="d-pad">◄</button>
+                <button id="rightBtn" class="d-pad">►</button>
+                <button id="downBtn" class="d-pad">▼</button>
+                <button id="boostBtn">BOOST</button>
+            </div>
+        </div>
+        <div id="leaderboard" class="info-column">
+          <h2>🏆 Global Top 100</h2>
+          <ol id="leaderboardList"><li>Loading...</li></ol>
+        </div>
     </div>
 
     <div class="donation-container">
@@ -64,13 +67,27 @@
     </div>
 
     <div id="gameOverScreen" class="overlay-container">
+      <div class="game-over-box">
+        <h2>Game Over</h2>
+        <p>Your Final Score: <span id="finalScore">0</span></p>
+        <div class="game-over-buttons">
+          <button id="playAgainBtn">Play Again</button>
+          <button id="lobbyBtn">Back to Lobby</button>
+        </div>
+        <div class="share-section">
+            <p>Share your score!</p>
+            <div class="share-buttons">
+                <button id="twitterShareBtn" class="share-button twitter">X</button>
+                <button id="whatsappShareBtn" class="share-button whatsapp">WhatsApp</button>
+            </div>
+        </div>
       </div>
+    </div>
   </div>
 
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
-  
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script type="module" src="game.js"></script>
 </body>
