--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
   
   <link rel="icon" type="image/png" href="favicon.png">
-  
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -49,18 +48,18 @@
               <div id="playCounterDisplay">Plays: ...</div>
             </div>
             <canvas id="gameCanvas" width="400" height="400"></canvas>
-            </div>
+        </div>
         <div id="leaderboard" class="info-column">
           <h2>🏆 Global Top 100</h2>
           <ol id="leaderboardList"><li>Loading...</li></ol>
         </div>
     </div>
 
-    <div class="donation-container">
-        <a href="https://ko-fi.com/franbucho" target="_blank" rel="noopener noreferrer" class="donation-button">
+    <footer class="page-footer">
+        <a href="https://www.buymeacoffee.com/Franbucho" target="_blank" rel="noopener noreferrer" class="donation-button">
             Support the Project ☕
         </a>
-    </div>
+    </footer>
 
     <div id="gameOverScreen" class="overlay-container">
       <div class="game-over-box">
